src/App.css
.App {
  text-align: center;
  background-color: black;
  color: white;
  padding-bottom: 10vh;
  margin-bottom: -50px;
}

.maintitle{
  padding-top: 15vh;
  background:
  linear-gradient(
          rgba(0, 0, 0, 0),
          rgba(0, 0, 0, 1)
  ),
  url("https://cloudfront-us-east-1.images.arcpublishing.com/spectator/TNU44YY7UFHWPMLCPU4HUL2HAE.jpg");
  background-repeat: no-repeat;
  background-size: contain;
  /* height: 75vh; */
}
.opinion{
  margin: 2vw;
  margin-left: 9vw;
  text-align: left;
  font-size: 1.5rem;
  font-family: Whitney, sans-serif;
}
.pagetitle{
  padding-left: 9vw;
  padding-right: 9vw;
  margin-bottom: -4vw;
  text-align: center;
  font-size: 5.5rem;
  font-family: Whitney, sans-serif;
}

.center{
  width:80%;
  margin-left:auto;
  margin-right:auto;
}
.credits {
  margin: 0vw 2vw 2vw 2vw;
  float: right;
  margin-top: 14%;
  margin-right: 9vw;
  text-align: left;
  font-size: 1rem;
  font-family: Whitney, sans-serif;
}
.credits p {
  margin-top: .3em;
  margin-bottom: .3em;
}

.letter{
  font-family: Oswald, sans-serif;
  font-size: 2rem;
  text-align: left;
  width: 80%;
  margin: 16% 10% 2vw 10%;
}

.letter-content {
  font-family: Whitney, sans-serif;
  text-align: left;
  width: 80%;
  margin: 0 10%;
  font-size: 1rem;
  line-height: 1.2rem;
}

.letter-content a{
  color: inherit;
  text-decoration: underline;
  cursor: pointer;
}

.timeline-title {
  font-family: Oswald, sans-serif;
  text-align: center;
  font-size: 3rem;
  margin: 3rem 0;
}

.thepath{
  width: 70vw;
}

.sub{
  font-family: Whitney, sans-serif;
  margin: 2vw;
  font-size: 1.5rem;
  text-align: center;
  line-height: 1.5rem;
}

@media (max-width: 992px){
  .sub, .opinion{
    font-size: 1rem !important;
    line-height: 1rem !important;
  }
  .credits {
    font-size: 0.8rem !important;
    line-height: 1rem !important;
    margin-top: 7%;
  }

  .year {
    margin-bottom: 2em;
  }
}

.allcontainer{
  overflow-y: hidden;
  height: 50vh;
  margin-top:-120px;
}

.allcontain{
  transition-duration: 1s;
}

.upArrow{
  height: 10vh;
  cursor: pointer;
  position: relative;
}

.upArrowArrow{
  position: absolute;
  bottom: 30% !important;
  transform: translateX(-50%);
  width: 100px;
}

.downArrow{
  height: 10vh;
  cursor: pointer;
}

.downArrowArrow{
  width: 100px;
}

.keyImage{
  width: 30px;
  vertical-align: middle;
  margin: .5rem;
}

